@@ -22,6 +22,11 @@ Breaking API Changes
     Now, `com.twitter.finagle.loadbalancer.Balancers` defines the collection of balancer
     constructors.
 
+  * finagle-core: Aperture can no longer be enabled via command line flags. Configuring
+    per-client settings globally is generally not a good idea and we're working to remove
+    these flags from Finagle. Use the constructors in `com.twitter.finagle.loadbalancer.Balancers`
+    to create an instance that can be injected into a client.
+
 6.25.0
 ------
 
